Alignment fixes

--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -66,7 +66,6 @@
 .about-page-past-section {
     padding-right: 70px;
     width: 410px;
-    transform: translateY(-6px);
 }
 
 .about-page-past-section h3 {
